--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-    
+    Lab 6: Thanh Dat Vo.
+    You can see my answers in console
 </body>
 </html>
